5.0-SNAPSHOT - JDK 11 as a baseline version - Use Logback for logging. - Windows related code was deleted.